--- a/backend/package.json
+++ b/backend/package.json
@@ -23,10 +23,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "jsonwebtoken": "^8.5.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.8.10",
-    "nodemon": "^2.0.15"
+    "jsonwebtoken": "^8.5.1",
+    "nodemon": "^2.0.15",
+    "pg": "^8.7.3"
   }
 }
