--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/schematics": "^14.2.1",
     "@angular/animations": "9.1.1",
     "@angular/cdk": "9.2.0",
     "@angular/common": "9.1.1",
@@ -60,8 +61,8 @@
     "node-pre-gyp": "^0.14.0",
     "protractor": "5.4.3",
     "ts-node": "8.8.2",
-    "tslint": "6.1.1",
     "tslib": "1.11.1",
+    "tslint": "6.1.1",
     "typescript": "3.8.3"
   }
 }
