--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,47 +19,47 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/schematics": "^14.2.1",
-    "@angular/animations": "9.1.1",
-    "@angular/cdk": "9.2.0",
-    "@angular/common": "9.1.1",
+    "@angular/animations": "^14.2.0",
+    "@angular/cdk": "^14.2.0",
+    "@angular/common": "^14.2.0",
     "@angular/compiler": "9.1.1",
-    "@angular/core": "9.1.1",
-    "@angular/flex-layout": "9.0.0-beta.29",
-    "@angular/forms": "9.1.1",
+    "@angular/core": "^14.2.0",
+    "@angular/flex-layout": "^14.0.0-beta.40",
+    "@angular/forms": "^14.2.0",
     "@angular/http": "7.2.16",
-    "@angular/material": "9.2.0",
-    "@angular/platform-browser": "9.1.1",
-    "@angular/platform-browser-dynamic": "9.1.1",
-    "@angular/router": "9.1.1",
+    "@angular/material": "^14.2.0",
+    "@angular/platform-browser": "^14.2.0",
+    "@angular/platform-browser-dynamic": "^14.2.0",
+    "@angular/router": "^14.2.0",
     "@ngx-translate/core": "12.1.2",
     "@ngx-translate/http-loader": "4.0.0",
-    "chart.js": "2.9.3",
+    "chart.js": "^2.9.4",
     "core-js": "3.6.5",
     "express": "^4.17.2",
-    "ng2-charts": "2.3.0",
+    "ng2-charts": "^2.4.3",
     "path": "^0.12.7",
     "rxjs": "6.5.5",
     "web-animations-js": "^2.3.2",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.1",
-    "@angular/cli": "9.1.1",
+    "@angular-devkit/build-angular": "^14.2.1",
+    "@angular/cli": "^9.1.13",
     "@angular/compiler-cli": "9.1.1",
     "@angular/language-service": "9.1.1",
     "@types/jasmine": "3.5.10",
     "@types/jasminewd2": "2.0.8",
     "@types/node": "^13.11.1",
-    "codelyzer": "^5.2.2",
+    "codelyzer": "^0.0.28",
     "jasmine-core": "3.5.0",
     "jasmine-spec-reporter": "5.0.1",
-    "karma": "^5.0.0",
+    "karma": "^6.4.0",
     "karma-chrome-launcher": "3.1.0",
     "karma-coverage-istanbul-reporter": "2.1.1",
     "karma-jasmine": "3.1.1",
     "karma-jasmine-html-reporter": "1.5.3",
     "node-pre-gyp": "^0.14.0",
-    "protractor": "5.4.3",
+    "protractor": "^5.4.4",
     "ts-node": "8.8.2",
     "tslib": "1.11.1",
     "tslint": "6.1.1",
