--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
     "@angular/animations": "^14.2.0",
     "@angular/cdk": "^14.2.0",
     "@angular/common": "^14.2.0",
-    "@angular/compiler": "9.1.1",
+    "@angular/compiler": "10.2.5",
     "@angular/core": "^14.2.0",
     "@angular/flex-layout": "^14.0.0-beta.40",
     "@angular/forms": "^14.2.0",
@@ -44,25 +44,25 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.1",
-    "@angular/cli": "^9.1.13",
-    "@angular/compiler-cli": "9.1.1",
-    "@angular/language-service": "9.1.1",
+    "@angular/cli": "^10.2.4",
+    "@angular/compiler-cli": "10.2.5",
+    "@angular/language-service": "10.2.5",
     "@types/jasmine": "3.5.10",
     "@types/jasminewd2": "2.0.8",
     "@types/node": "^13.11.1",
     "codelyzer": "^0.0.28",
-    "jasmine-core": "3.5.0",
-    "jasmine-spec-reporter": "5.0.1",
-    "karma": "^6.4.0",
-    "karma-chrome-launcher": "3.1.0",
-    "karma-coverage-istanbul-reporter": "2.1.1",
-    "karma-jasmine": "3.1.1",
-    "karma-jasmine-html-reporter": "1.5.3",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "node-pre-gyp": "^0.14.0",
-    "protractor": "^5.4.4",
+    "protractor": "~7.0.0",
     "ts-node": "8.8.2",
-    "tslib": "1.11.1",
-    "tslint": "6.1.1",
-    "typescript": "3.8.3"
+    "tslib": "^2.0.0",
+    "tslint": "~6.1.0",
+    "typescript": "4.0.8"
   }
 }
