--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,14 +44,14 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.1",
-    "@angular/cli": "^10.2.4",
+    "@angular/cli": "^11.2.19",
     "@angular/compiler-cli": "11.2.14",
     "@angular/language-service": "11.2.14",
-    "@types/jasmine": "3.5.10",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "2.0.8",
     "@types/node": "^13.11.1",
-    "codelyzer": "^0.0.28",
-    "jasmine-core": "~3.5.0",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "^6.4.0",
     "karma-chrome-launcher": "~3.1.0",
