--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "chart.js": "^2.9.4",
     "core-js": "3.6.5",
     "express": "^4.17.2",
+    "moment": "^2.29.4",
     "ng2-charts": "^2.4.3",
     "path": "^0.12.7",
     "rxjs": "6.5.5",
