--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
     "@angular/cdk": "^14.2.0",
     "@angular/common": "^14.2.0",
     "@angular/compiler": "14.2.0",
-    "@angular/core": "^14.2.0",
+    "@angular/core": "^14.2.5",
     "@angular/flex-layout": "^14.0.0-beta.40",
     "@angular/forms": "^14.2.0",
     "@angular/http": "7.2.16",
@@ -37,7 +37,7 @@
     "core-js": "3.6.5",
     "express": "^4.17.2",
     "moment": "^2.29.4",
-    "ng2-charts": "^2.4.3",
+    "@swimlane/ngx-charts": "20.1.0",
     "path": "^0.12.7",
     "rxjs": "6.5.5",
     "zone.js": "~0.11.4"
