--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "Flipkart",
+        "Highcharts",
         "Paytm"
     ],
     "angular.enable-strict-mode-prompt": false
