--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,11 +33,12 @@
     "@angular/router": "^14.2.0",
     "@ngx-translate/core": "12.1.2",
     "@ngx-translate/http-loader": "4.0.0",
+    "@swimlane/ngx-charts": "20.1.0",
     "chart.js": "^2.9.4",
     "core-js": "3.6.5",
     "express": "^4.17.2",
+    "highcharts-angular": "^3.0.0",
     "moment": "^2.29.4",
-    "@swimlane/ngx-charts": "20.1.0",
     "path": "^0.12.7",
     "rxjs": "6.5.5",
     "zone.js": "~0.11.4"
