--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,11 +34,13 @@
     "@ngx-translate/core": "12.1.2",
     "@ngx-translate/http-loader": "4.0.0",
     "@swimlane/ngx-charts": "20.1.0",
+    "@syncfusion/ej2-angular-diagrams": "^20.3.50-ngcc",
     "chart.js": "^2.9.4",
     "core-js": "3.6.5",
     "express": "^4.17.2",
     "highcharts-angular": "^3.0.0",
     "moment": "^2.29.4",
+    "ngx-mat-select-search": "^5.0.0",
     "path": "^0.12.7",
     "rxjs": "6.5.5",
     "zone.js": "~0.11.4"
